k8s/k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cv-nuxt
  namespace: cv-nuxt
  labels:
    app: cv-nuxt
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: cv-nuxt
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-nuxt
  namespace: cv-nuxt
  labels:
    app: cv-nuxt
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: cv-nuxt
  template:
    metadata:
      labels:
        app: cv-nuxt
    spec:
      containers:
      - name: cv-nuxt
        image: ghcr.io/dilaz/cv-nuxt:5db5cba04b530cd3e464549867d3b4002a6134a9
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10000
          capabilities:
            drop: [ALL]
      imagePullSecrets:
      - name:  github-container-registry
